fall and spring transition to OOI timeseries

--- a/eval/crosssections.ipynb
+++ b/eval/crosssections.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc51ba40eb0>]"
+       "[<matplotlib.lines.Line2D at 0x7f8a781f4e80>]"
       ]
      },
      "execution_count": 5,
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cid</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>time</th>\n",
+       "      <th>z</th>\n",
+       "      <th>SA</th>\n",
+       "      <th>CT</th>\n",
+       "      <th>DO (uM)</th>\n",
+       "      <th>NO3 (uM)</th>\n",
+       "      <th>Chl (mg m-3)</th>\n",
+       "      <th>name</th>\n",
+       "      <th>cruise</th>\n",
+       "      <th>source</th>\n",
+       "      <th>NO2 (uM)</th>\n",
+       "      <th>NH4 (uM)</th>\n",
+       "      <th>PO4 (uM)</th>\n",
+       "      <th>TA (uM)</th>\n",
+       "      <th>DIC (uM)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8060</th>\n",
+       "      <td>850.0</td>\n",
+       "      <td>-124.0992</td>\n",
+       "      <td>44.6512</td>\n",
+       "      <td>2017-09-25 20:54:24</td>\n",
+       "      <td>-23.110336</td>\n",
+       "      <td>33.446516</td>\n",
+       "      <td>12.551328</td>\n",
+       "      <td>314.265265</td>\n",
+       "      <td>0.779204</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>0.112780</td>\n",
+       "      <td>0.932994</td>\n",
+       "      <td>0.502382</td>\n",
+       "      <td>2288.501556</td>\n",
+       "      <td>2076.373528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8061</th>\n",
+       "      <td>850.0</td>\n",
+       "      <td>-124.0992</td>\n",
+       "      <td>44.6512</td>\n",
+       "      <td>2017-09-25 20:54:24</td>\n",
+       "      <td>-15.374120</td>\n",
+       "      <td>33.405417</td>\n",
+       "      <td>12.740639</td>\n",
+       "      <td>319.513309</td>\n",
+       "      <td>0.594596</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>0.123020</td>\n",
+       "      <td>1.168689</td>\n",
+       "      <td>0.502331</td>\n",
+       "      <td>2289.604468</td>\n",
+       "      <td>2062.427809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8062</th>\n",
+       "      <td>850.0</td>\n",
+       "      <td>-124.0992</td>\n",
+       "      <td>44.6512</td>\n",
+       "      <td>2017-09-25 20:54:24</td>\n",
+       "      <td>-9.819733</td>\n",
+       "      <td>33.393476</td>\n",
+       "      <td>12.844869</td>\n",
+       "      <td>326.374841</td>\n",
+       "      <td>0.266529</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>0.092260</td>\n",
+       "      <td>0.297282</td>\n",
+       "      <td>0.410044</td>\n",
+       "      <td>2273.491183</td>\n",
+       "      <td>2073.697049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8063</th>\n",
+       "      <td>850.0</td>\n",
+       "      <td>-124.0992</td>\n",
+       "      <td>44.6512</td>\n",
+       "      <td>2017-09-25 20:54:24</td>\n",
+       "      <td>-5.753032</td>\n",
+       "      <td>33.392493</td>\n",
+       "      <td>12.996778</td>\n",
+       "      <td>314.181569</td>\n",
+       "      <td>0.112757</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>0.061504</td>\n",
+       "      <td>0.420276</td>\n",
+       "      <td>0.389524</td>\n",
+       "      <td>2277.175712</td>\n",
+       "      <td>2049.611901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8064</th>\n",
+       "      <td>850.0</td>\n",
+       "      <td>-124.0992</td>\n",
+       "      <td>44.6512</td>\n",
+       "      <td>2017-09-25 20:54:24</td>\n",
+       "      <td>-2.578965</td>\n",
+       "      <td>33.392509</td>\n",
+       "      <td>13.125502</td>\n",
+       "      <td>336.699421</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8124</th>\n",
+       "      <td>856.0</td>\n",
+       "      <td>-127.0078</td>\n",
+       "      <td>44.6475</td>\n",
+       "      <td>2017-09-26 20:35:07</td>\n",
+       "      <td>-29.854501</td>\n",
+       "      <td>32.759008</td>\n",
+       "      <td>16.562733</td>\n",
+       "      <td>269.866428</td>\n",
+       "      <td>0.204786</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>0.010239</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.358375</td>\n",
+       "      <td>2236.360850</td>\n",
+       "      <td>2027.581959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8125</th>\n",
+       "      <td>856.0</td>\n",
+       "      <td>-127.0078</td>\n",
+       "      <td>44.6475</td>\n",
+       "      <td>2017-09-26 20:35:07</td>\n",
+       "      <td>-14.977388</td>\n",
+       "      <td>31.946015</td>\n",
+       "      <td>18.142963</td>\n",
+       "      <td>236.028768</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8126</th>\n",
+       "      <td>856.0</td>\n",
+       "      <td>-127.0078</td>\n",
+       "      <td>44.6475</td>\n",
+       "      <td>2017-09-26 20:35:07</td>\n",
+       "      <td>-10.613230</td>\n",
+       "      <td>31.947018</td>\n",
+       "      <td>18.162768</td>\n",
+       "      <td>242.835606</td>\n",
+       "      <td>0.071600</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>0.010229</td>\n",
+       "      <td>0.010229</td>\n",
+       "      <td>0.132971</td>\n",
+       "      <td>2208.749453</td>\n",
+       "      <td>1987.710851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8127</th>\n",
+       "      <td>856.0</td>\n",
+       "      <td>-127.0078</td>\n",
+       "      <td>44.6475</td>\n",
+       "      <td>2017-09-26 20:35:07</td>\n",
+       "      <td>-5.356278</td>\n",
+       "      <td>31.929942</td>\n",
+       "      <td>18.223437</td>\n",
+       "      <td>246.515893</td>\n",
+       "      <td>0.102280</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>0.020456</td>\n",
+       "      <td>0.010228</td>\n",
+       "      <td>0.143192</td>\n",
+       "      <td>2214.981403</td>\n",
+       "      <td>1987.203254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8128</th>\n",
+       "      <td>856.0</td>\n",
+       "      <td>-127.0078</td>\n",
+       "      <td>44.6475</td>\n",
+       "      <td>2017-09-26 20:35:07</td>\n",
+       "      <td>-2.578966</td>\n",
+       "      <td>31.929945</td>\n",
+       "      <td>18.227930</td>\n",
+       "      <td>244.109127</td>\n",
+       "      <td>0.184102</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bottle</td>\n",
+       "      <td>SH1709</td>\n",
+       "      <td>nceiCoastal</td>\n",
+       "      <td>0.010228</td>\n",
+       "      <td>0.061367</td>\n",
+       "      <td>0.143191</td>\n",
+       "      <td>2206.770240</td>\n",
+       "      <td>1986.461420</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>69 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        cid       lon      lat                time          z         SA  \\\n",
+       "8060  850.0 -124.0992  44.6512 2017-09-25 20:54:24 -23.110336  33.446516   \n",
+       "8061  850.0 -124.0992  44.6512 2017-09-25 20:54:24 -15.374120  33.405417   \n",
+       "8062  850.0 -124.0992  44.6512 2017-09-25 20:54:24  -9.819733  33.393476   \n",
+       "8063  850.0 -124.0992  44.6512 2017-09-25 20:54:24  -5.753032  33.392493   \n",
+       "8064  850.0 -124.0992  44.6512 2017-09-25 20:54:24  -2.578965  33.392509   \n",
+       "...     ...       ...      ...                 ...        ...        ...   \n",
+       "8124  856.0 -127.0078  44.6475 2017-09-26 20:35:07 -29.854501  32.759008   \n",
+       "8125  856.0 -127.0078  44.6475 2017-09-26 20:35:07 -14.977388  31.946015   \n",
+       "8126  856.0 -127.0078  44.6475 2017-09-26 20:35:07 -10.613230  31.947018   \n",
+       "8127  856.0 -127.0078  44.6475 2017-09-26 20:35:07  -5.356278  31.929942   \n",
+       "8128  856.0 -127.0078  44.6475 2017-09-26 20:35:07  -2.578966  31.929945   \n",
+       "\n",
+       "             CT     DO (uM)  NO3 (uM)  Chl (mg m-3)    name  cruise  \\\n",
+       "8060  12.551328  314.265265  0.779204           NaN  bottle  SH1709   \n",
+       "8061  12.740639  319.513309  0.594596           NaN  bottle  SH1709   \n",
+       "8062  12.844869  326.374841  0.266529           NaN  bottle  SH1709   \n",
+       "8063  12.996778  314.181569  0.112757           NaN  bottle  SH1709   \n",
+       "8064  13.125502  336.699421       NaN           NaN  bottle  SH1709   \n",
+       "...         ...         ...       ...           ...     ...     ...   \n",
+       "8124  16.562733  269.866428  0.204786           NaN  bottle  SH1709   \n",
+       "8125  18.142963  236.028768       NaN           NaN  bottle  SH1709   \n",
+       "8126  18.162768  242.835606  0.071600           NaN  bottle  SH1709   \n",
+       "8127  18.223437  246.515893  0.102280           NaN  bottle  SH1709   \n",
+       "8128  18.227930  244.109127  0.184102           NaN  bottle  SH1709   \n",
+       "\n",
+       "           source  NO2 (uM)  NH4 (uM)  PO4 (uM)      TA (uM)     DIC (uM)  \n",
+       "8060  nceiCoastal  0.112780  0.932994  0.502382  2288.501556  2076.373528  \n",
+       "8061  nceiCoastal  0.123020  1.168689  0.502331  2289.604468  2062.427809  \n",
+       "8062  nceiCoastal  0.092260  0.297282  0.410044  2273.491183  2073.697049  \n",
+       "8063  nceiCoastal  0.061504  0.420276  0.389524  2277.175712  2049.611901  \n",
+       "8064  nceiCoastal       NaN       NaN       NaN          NaN          NaN  \n",
+       "...           ...       ...       ...       ...          ...          ...  \n",
+       "8124  nceiCoastal  0.010239  0.000000  0.358375  2236.360850  2027.581959  \n",
+       "8125  nceiCoastal       NaN       NaN       NaN          NaN          NaN  \n",
+       "8126  nceiCoastal  0.010229  0.010229  0.132971  2208.749453  1987.710851  \n",
+       "8127  nceiCoastal  0.020456  0.010228  0.143192  2214.981403  1987.203254  \n",
+       "8128  nceiCoastal  0.010228  0.061367  0.143191  2206.770240  1986.461420  \n",
+       "\n",
+       "[69 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +633,7 @@
        "Timedelta('0 days 23:40:43')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
