hourly flow through JdF

--- a/eval/JdF_flow.ipynb
+++ b/eval/JdF_flow.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,36 +79,35 @@
     "\n",
     "for f in fn:\n",
     "\n",
-    "    dist = lo_plot.get_sect(f,'u',np.repeat(x,(ymax+1-ymin)),np.arange(ymin,ymax+1))[6]\n",
-    "    z = lo_plot.get_zfull(0,f,'u')[:,ymin:ymax,x][::-1]\n",
+    "    dist = lo_plot.get_sect(f,'u',np.repeat(x,(ymax+1)-(ymin-1)),np.arange(ymin-1,ymax+1))[6]\n",
+    "    z = lo_plot.get_zfull(0,f,'u')[:,ymin:ymax+1,x]\n",
+    "    \n",
     "    width = dist[:,1:]-dist[:,:-1]\n",
-    "    height = z[:-1,:]-z[1:,:]\n",
-    "    height = height[1:,:]\n",
-    "    width = width[1:,:]\n",
+    "    height = (z[:-1,:]-z[1:,:])*-1\n",
     "\n",
-    "    u = xr.open_dataset(f).u.sel(eta_u=slice(ymin, ymax), xi_u=x).squeeze(dim='ocean_time')\n",
+    "    u = xr.open_dataset(f).u.sel(eta_u=slice(ymin, ymax+1), xi_u=x).squeeze(dim='ocean_time')\n",
     "\n",
-    "    flow += np.sum(np.where(u>0, u, 0)*height*width)"
+    "    flow += np.sum(np.where(u>0, u, 0)*height[:-1]*width[:-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "69377139.81019011"
+       "127863.08407233242"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flow"
+    "flow/(len(dates))"
    ]
   },
   {
