--- a/ariane/EddyProblem.ipynb
+++ b/ariane/EddyProblem.ipynb
@@ -454,7 +454,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LObecca",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -472,5 +472,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
