explicitely close each xr dataset

--- a/tracers/geotraces.ipynb
+++ b/tracers/geotraces.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,24 @@
     "        if np.max(data.CTDSAL_D_CONC_SENSOR[i,:]).values > 0 :\n",
     "            # print(i.values)\n",
     "            st = np.append(st,int(i.values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2013-08-23T04:17:40.000000520 - 2018-10-14T04:01:58.999763584\n"
+     ]
+    }
+   ],
+   "source": [
+    "# date range of data\n",
+    "print(np.min(data.date_time).values,'-',np.max(data.date_time).values)"
    ]
   },
   {
