marine sanctuary mooring

--- a/seasontiming.ipynb
+++ b/seasontiming.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_42977/586479787.py:5: FutureWarning: The 'axis' keyword in DataFrame.resample is deprecated and will be removed in a future version.\n",
+      "/tmp/ipykernel_87239/586479787.py:5: FutureWarning: The 'axis' keyword in DataFrame.resample is deprecated and will be removed in a future version.\n",
       "  df = df.resample('D',axis=0).mean()\n"
      ]
     },
@@ -342,7 +342,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fb6b8328610>]"
+       "[<matplotlib.lines.Line2D at 0x7fa8eab38c10>]"
       ]
      },
      "execution_count": 4,
@@ -545,7 +545,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb6b82ebe10>"
+       "<matplotlib.legend.Legend at 0x7fa8e12d5390>"
       ]
      },
      "execution_count": 11,
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -699,6 +699,41 @@
     "    ax.fill_between(df.datetime, -1, 1, where=(df.datetime<down[j+1])&(df.datetime>=down[j]), color='b', alpha=0.2)\n",
     "\n",
     "# ax.legend(loc=\"lower left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([datetime.timedelta(days=-49), datetime.timedelta(days=24),\n",
+       "       datetime.timedelta(days=-18), datetime.timedelta(days=31),\n",
+       "       datetime.timedelta(days=-14), datetime.timedelta(days=79),\n",
+       "       datetime.timedelta(days=-46), datetime.timedelta(days=18),\n",
+       "       datetime.timedelta(days=-32), datetime.timedelta(days=8),\n",
+       "       datetime.timedelta(days=-28), datetime.timedelta(days=43),\n",
+       "       datetime.timedelta(days=-10), datetime.timedelta(days=136)],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how long are each of the buffers?\n",
+    "up[1:-1]-down"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## can we get more years from a different mooring?"
    ]
   },
   {
