--- a/ariane/EddyProblem.ipynb
+++ b/ariane/EddyProblem.ipynb
@@ -1175,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
